--- a/nablaweb/templates/news/news_base.html
+++ b/nablaweb/templates/news/news_base.html
@@ -1,8 +1,14 @@
 {% extends "content/content_base.html" %}
 
+{% block content %}
+heisann
+{% endblock content %}
+
+
 {% block readmore %}
     <a href="{% url news_detail news.id %}">Les mer</a>
 {% endblock %}
+
 
 {% block content_type %}
     Nyhet
