--- a/nablaweb/templates/news/news_list.html
+++ b/nablaweb/templates/news/news_list.html
@@ -1,3 +1,7 @@
-{% extends "content/content_list.html" %}
+{% extends "base.html" %}
 
 {% block title %}Nyheter{% endblock %}
+
+{% block content %}
+    news_list.html
+{% endblock content %}
