Fikset litt på news_list.html

--- a/nablaweb/templates/news/news_list.html
+++ b/nablaweb/templates/news/news_list.html
@@ -3,5 +3,12 @@
 {% block title %}Nyheter{% endblock %}
 
 {% block content %}
-    news_list.html
+<div class="span8">
+{% for news in news_list %}
+    <h2>{{ news.headline }}</h2>
+    <p>{{ news.lead_paragraph }}</p>
+    <p><a class="btn" href="{% url news_detail news.id %}">Les mer &raquo;</a></p>
+    <hr>
+{% endfor %}
+</div>
 {% endblock content %}
