--- a/nablaweb/templates/news/news_detail.html
+++ b/nablaweb/templates/news/news_detail.html
@@ -1,1 +1,39 @@
-{% extends "news/news_base.html" %}
+{% extends "base.html" %}
+{% load markup %}
+{% load humanize %}
+
+{% block content %}
+<h2>{{ news.headline }}</h2>
+{{ news.body|markdown }}
+{% endblock %}
+
+{% block sidebar %}
+<table class="table">
+
+    <!-- Publisert -->
+    <tr><td>Publisert</td><td>{{ news.created_date|naturalday }} kl. {{ news.created_date|date:"G:i" }}</td></tr>
+    
+    <!-- Av -->
+    {% if news.created_by %}
+    <tr><td>Av</td><td>{{ news.created_by.username }}</td></tr>
+    {% endif %}
+
+    <!-- Sist endret -->
+    <tr><td>Sist endret</td><td>{{ news.last_changed_date|naturalday }} kl. {{ news.last_changed_date|date:"G:i" }}</td></tr>
+
+    <!-- Av -->
+    {% if news.last_changed_by %}
+    <tr><td>Av</td><td>{{ news.last_changed_by.username }}</td></tr>
+    {% endif %}
+
+</table>
+
+<div class="well" style="padding: 8px 0;">
+    <ul class="nav list">
+        <li class="nav-header">Admin</li>
+        <li><a href="#endre"><i class="icon pencil"></i> Endre</a></li>
+        <li><a href="#slett"><i class="icon trash"></i> Slett</a></li>
+    </ul>
+</div>
+
+{% endblock %}
