--- a/nablaweb/templates/events/event_administer.html
+++ b/nablaweb/templates/events/event_administer.html
@@ -52,6 +52,11 @@
   {% endwith %}
 
 </form>
+
+{% else %}
+
+<p>Registrering er ikke nødvendig, så det er ikke så mye å gjøre her.</p>
+
 {% endif %}
 
 {% endblock %}
